fixed footer alignment & clean code

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,7 +7,7 @@ footer {
 
 footer .footer > div {
   box-sizing: border-box;
-  margin: 0 auto;
+  margin: 0 0 0 auto;
   max-width: 1264px;
   width: 100%;
 }
@@ -27,6 +27,8 @@ footer .footer a:any-link:hover {
 }
 
 footer .footer .default-content-wrapper ul {
+  display: flex;
+  flex-direction: column;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -75,7 +77,7 @@ footer .footer .default-content-wrapper ul li:not(:has(.icon)) {
 
   footer .footer .default-content-wrapper ul {
     display: flex;
-    flex-direction: column;
+    
     gap: 16px;
   }
 }
